[package]
name = "md-tui"
version = "0.1.0"
authors = ["Evan Valmassoi <whatscs@jointheb.org>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
crossterm = "0.19.0"
fern = "0.6.0"
log = "0.4.14"
tui = { version = "0.15.0", default-features = false, features = ['crossterm'] }
viuer = "0.4.0"
mangadex = "0.0.3"

